# django-orm-cost

./: .gitignore  README.md  pyproject.toml
django_orm_cost/: __init__.py  apps.py  decorator.py  middleware.py  tracker.py
django_orm_cost/management/commands/: orm_cost.py  ping.py
