[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-orm-cost"
version = "0.1.0"
description = "CLI tool to run cost analysis on Django REST endpoints for ORM optimization opportunities."
authors = [
    { name = "Krishiv Khambhayata", email = "krishiv1545@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Django>=3.2"
]

[tool.setuptools.packages.find]
where = ["."]